--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -5,7 +5,7 @@
   <h4>Tell us what type of musician you're looking for.</h4>
     <select ng-click="bandManagerSelect()">
     <option ng-load="bandmanager" value="leadGuitarist">Lead Guitarist</option>
-    <option value="drummer" selected>Drummer</option>
+    <option ng-change="" value="drummer" selected>Drummer</option>
     <option value="backupGuitarist">Backup Guitarist</option>
     <option value="leadGuitarist">Lead Guitarist</option>
     <option value="backupSinger">Backup Singer</option>
