--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
     background: transparent url("https://s3.sonicbids.com/marketing/homepage.jpg") 50% 50% no-repeat;
-    background-size: auto;;
+    background-size: auto;
+    ;
     color: #fff;
-
 }
 .loginpage {
     margin-left: 36%;
@@ -80,7 +80,7 @@ body {
     width: 55%;
     border: solid 1px #d65600;
     font-size: 11px;
-    margin-left: 20%;
+    margin-left: 15%;
 }
 .musician h2 {
     color: #f60;
@@ -93,6 +93,10 @@ body {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: white;
     text-align: center;
+}
+.musician button {
+    margin-left: 45%;
+    margin-top: 5%;
 }
 .bandmanager {
     border: solid 2px #fff;
