--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
   <h4>Tell us what type of gig you're looking for.</h4>
     <form action="" >
     <input ng-model="managers" type="checkbox" value="leadGuitarist">Lead Guitarist
-    <input ng-model="managers" type="checkbox" value="drummer">Drummer
+    <input ng-model="managers" type="checkbox" value="drummer">drummer
     <input ng-model="managers" type="checkbox" value="backupGuitarist">Backup Guitarist
     <input ng-model="managers" type="checkbox" value="leadGuitarist">Lead Guitarist
     <input ng-model="managers" type="checkbox" value="backupSinger">Backup Singer
