--- a/public/templates/available.html
+++ b/public/templates/available.html
@@ -1,5 +1,5 @@
 <h3>List of available {{instrument}}</h3>
 <ul>
-  <li ng-repeat="musicians in musician"> <a href="">{{musicians.name}} {{musicians.rating}} {{musicians.hourlyRate}} {{musicians.email}}</a></li>
+  <li ng-repeat="musicians in musicguy"> <a href="">{{musicguy.name}} {{musicguy.rating}} {{musicguy.hourlyRate}} {{musicguy.email}}</a></li>
 
 </ul>
