--- a/public/templates/lookingfor.html
+++ b/public/templates/lookingfor.html
@@ -1,5 +1,4 @@
 <h3>List of people looking for {{instrument}}</h3>
 <ul>
-
-  <li ng-repeat="musicians in musician"><a href="">{{musicians.name}}</a></li>
+  <li ng-repeat="musicians in musician"><a href="">{{name}}</a></li>
 </ul>
