--- a/templates/home.html
+++ b/templates/home.html
@@ -22,15 +22,15 @@
   <h2>I'm a musician </h2>
   <h4>Tell us what type of gig you're looking for.</h4>
     <form action="" >
-    <input ng-model="managers" type="checkbox" value="leadGuitarist">Lead Guitarist
-    <input ng-model="managers" type="checkbox" value="drummer">drummer
-    <input ng-model="managers" type="checkbox" value="backupGuitarist">Backup Guitarist
-    <input ng-model="managers" type="checkbox" value="leadGuitarist">Lead Guitarist
-    <input ng-model="managers" type="checkbox" value="backupSinger">Backup Singer
-    <input ng-model="managers" type="checkbox" value="bassist">Bassist
-    <input ng-model="managers" type="checkbox" value="tambourine">Tambourine
-    <input ng-model="managers" type="checkbox" value="cowBellPlayer">Cowbell Player
-    <input ng-model="managers" type="checkbox" value="pianist">Pianist
+    <input type="checkbox" value="leadGuitarist">Lead Guitarist
+    <input type="checkbox" value="drummer">drummer
+    <input type="checkbox" value="backupGuitarist">Backup Guitarist
+    <input type="checkbox" value="leadGuitarist">Lead Guitarist
+    <input type="checkbox" value="backupSinger">Backup Singer
+    <input type="checkbox" value="bassist">Bassist
+    <input type="checkbox" value="tambourine">Tambourine
+    <input type="checkbox" value="cowBellPlayer">Cowbell Player
+    <input type="checkbox" value="pianist">Pianist
     </form>
     <button type="button" name="button" ng-click="musicianSelect()">Let's go!</button>
 </div>
