--- a/public/templates/booking.html
+++ b/public/templates/booking.html
@@ -1,3 +1,16 @@
 <div class="bookingpage">
-<h1 ng-repeat="person in musicians">Congrats! You've booked {{person.name}}</h1>
+<h1 ng-repeat="person in musicians | limitTo: 1">Congrats! You've booked {{person.name}}</h1>
+<h3>Enter your contact information so that they can get in touch.</h3>
+<div class="finalinfo">
+  <input type="text" name="name" value="" placeholder="Full Name">
+  <input type="text" name="name" value="" placeholder="Phone Number">
+  <input type="text" name="name" value="" placeholder="Email Address">
+  <input type="text" name="name" value="" placeholder="Credit Card">
+  <br>
+  <button type="button" name="button"> All done</button>
+
+</div>
+
+
+
 </div>
