--- a/public/main.css
+++ b/public/main.css
@@ -206,7 +206,7 @@ li a:hover {
   margin-bottom: 5%; }
 
 .lookingforpage li:hover {
-  color: #f60; }
+  color: #00bcd4; }
 
 .lookingforpage li {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -251,12 +251,9 @@ li a:hover {
 .bookingpage {
   width: 75%;
   text-align: center;
-  border: solid 2px #fff;
   height: 300px;
   overflow: scroll;
   margin-left: 13%;
-  background-color: black;
-  opacity: .7;
   margin-top: 5%; }
 
 .bookingpage h1 {
@@ -270,9 +267,6 @@ li a:hover {
   padding: 75px 0 0;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
 
-.bookingpage:hover {
-  border: solid 2px #f60; }
-
 .finalinfo {
   width: 100%;
   display: block; }
@@ -280,12 +274,13 @@ li a:hover {
 .finalinfo input {
   border-radius: 5px;
   font-size: 15px;
-  border: solid 2px #f60; }
+  border: solid 2px #00bcd4; }
 
 .finalinfo button {
   font-size: 20px;
   margin-top: 5px;
-  border-radius: 5px; }
+  border-radius: 5px;
+  background-color: #fff; }
 
 .finalinfo button:hover {
   background-color: #00bcd4;
@@ -296,8 +291,11 @@ li a:hover {
   font-family: 'Archivo Narrow', sans-serif;
   font-size: 50px;
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   letter-spacing: -.05em;
   line-height: 1em;
-  padding: 75px 0 0;
+  margin-top: -17px;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+
+.calendar {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
