--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -21,7 +21,7 @@
 <div class="bandmanager">
   <h2>I'm a musician </h2>
   <h4>Tell us what type of gig you're looking for.</h4>
-    <select ng-model="musician">
+    <select ng-model="managers">
     <option value="leadGuitarist">Lead Guitarist</option>
     <option value="drummer">drummer</option>
     <option value="backupGuitarist">Backup Guitarist</option>
