--- a/main.css
+++ b/main.css
@@ -280,6 +280,8 @@ li a:hover {
     border-radius: 5px;
     font-size: 15px;
     border: solid 2px #00bcd4;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #929292;
 }
 .finalinfo button {
     font-size: 20px;
